welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:18: error: ambiguous reference to overloaded definition,
both method - in class Int of type (x: Char)Int
and  method - in class Int of type (x: Short)Int
match expected type ?
if (a-b=0)
     ^loneTeen:18: error: type mismatch;
 found   : Unit
 required: Boolean
if (a-b=0)
^